# notes

emacs/: org-mode.org
gnu/: autotools.md  autotools.org
gnu/automake/hello/: Makefile.in  configure  configure.ac
gnu/automake/hello.bak/src/: hello.c
gnu/automake/hello/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gnu/automake/hello/src/: Makefile.am  Makefile.in
gnu/automake/libsay/: Makefile.in  configure  configure.ac  say.pc.in
gnu/automake/libsay.bak/: Makefile.am
gnu/automake/libsay.bak/src/: Makefile.am
gnu/automake/libsay/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
gnu/automake/libsay/src/: Makefile.in  say_hello.c  say_hello.h
golang/: lesson1-HelloWorld.md  lesson2-ModuleAndPackage.md  lesson3-Specification.md
lang/golang/: lesson2-ModuleAndPackage.md
lang/python/: python.md
linux/: Linux字符设备驱动入门.md
markdown/: mermaid作图.md
