#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([say], [1.0.0], [BUG-REPORT-ADDRESS])
LT_INIT
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([src/say_hello.c])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_SUBST([LT_CURRENT], [1])
AC_SUBST([LT_REVISION], [0])
AC_SUBST([LT_AGE], [0])

AC_CONFIG_FILES([Makefile
                 src/Makefile
                 say.pc])
AC_OUTPUT
